# kamina-challenge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_EVOLUTION.md  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/core/: base_model.py  db.py  db_config.py  deps.py  seeders.py  types.py  vars.py
app/modules/authors/: model.py  router.py  schema.py  service.py
app/modules/books/: model.py  router.py  schema.py  service.py
app/modules/loans/: model.py  router.py  schema.py  service.py
app/modules/users/: model.py  router.py  schema.py  service.py
test/: authors_test.py  books_test.py  boosks_test.py  conftest.py  intructions_test.py  loans_test.py  users_test.py
