[project]
name = "kamina-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "httpx2>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.fastapi]
entrypoint = "app.main:app"
